// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationBadge count 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    class="pf-v6-c-button pf-m-stateful pf-m-read"
    data-ouia-component-id="OUIA-Generated-Button-stateful-:r2:"
    data-ouia-component-type="PF6/Button"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-button__icon pf-m-start"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0  "
        width="1em"
      >
        <path />
      </svg>
    </span>
    <span
      class="pf-v6-c-button__text"
    >
      3
    </span>
  </button>
</DocumentFragment>
`;

exports[`false NotificationBadge needs attention 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    class="pf-v6-c-button pf-m-stateful pf-m-attention"
    data-ouia-component-id="OUIA-Generated-Button-stateful-:r1:"
    data-ouia-component-type="PF6/Button"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-button__icon pf-m-start"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0  "
        width="1em"
      >
        <path />
      </svg>
    </span>
    <span
      class="pf-v6-c-button__text"
    >
      does not need attention Badge
    </span>
  </button>
</DocumentFragment>
`;

exports[`true NotificationBadge needs attention 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    class="pf-v6-c-button pf-m-stateful pf-m-attention"
    data-ouia-component-id="OUIA-Generated-Button-stateful-:r0:"
    data-ouia-component-type="PF6/Button"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-button__icon pf-m-start"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0  "
        width="1em"
      >
        <path />
      </svg>
    </span>
    <span
      class="pf-v6-c-button__text"
    >
      needs attention Badge
    </span>
  </button>
</DocumentFragment>
`;
